--- a/src/app/containers/app/app.component.html
+++ b/src/app/containers/app/app.component.html
@@ -1,6 +1,6 @@
 <nb-layout center>
   <nb-layout-header>
-
+    <app-nav-bar></app-nav-bar>
   </nb-layout-header>
   <nb-layout-column>Layout Content</nb-layout-column>
 
